--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -6,10 +6,11 @@
                 <div class="item">
                     <span class="project-title"><a href="#hook">Traveled 11 countries</a></span><br>
                      - <span class="project-tagline">US, England, France, Switzerland, Italy, Austria, German, Netherland, Thailand, Philippines, Hongkong</span><br>
-
                 </div><!--//item-->
+
                 <div class="item">
                     <span class="project-title"><a href="#" target="_blank">Certifications</a></span><br>
-                     - <span class="project-tagline">Information equipment operation technician</span>
+                     - <span class="project-tagline">Information equipment operation technician (2010)</span><br>
+                     - <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368 (2016)</span>
                 </div><!--//item-->
             </section><!--//section-->
