--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
                           </div>
                       </div><!--//level-bar-->
                   </div><!--//item-->
-                  
+
                     <div class="item">
                         <h3 class="level-title">C &amp; C++</h3>
                         <div class="level-bar">
@@ -42,7 +42,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Android Programming</h3>
+                        <h3 class="level-title">Android</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="75%">
                             </div>
