--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,23 +7,25 @@
                             <h3 class="job-title">Graduation Project</h3>
                             <div class="time">2016 - 2017</div>
                         </div><!--//upper-row-->
-                        <div class="company">project name</div>
+                        <div class="company">In & Out</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
+                        <p>Apply random forest which is machine learning algorithm to sensor data for high performance.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Mobile Application - WHEN</h3>
+                            <h3 class="job-title">Mobile Application</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">project name</div>
+                        <div class="company">WHEN</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>!!Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Developed group schedule management android application that find intersection time of all group members.</p>
+                        <p>Registered at google app store.!</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
