--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -50,7 +50,8 @@
                         <div class="company">Sujeong Senior Welfare Center</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p></p>
+                        <p>Basic smartphone education for the aged in Sujeong senior welfare center during summer vacation.</p>
+                        <p>Broadcasted in ABN which is Seongnam local broadcasting system.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
