--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -3,6 +3,7 @@
 <ul class="list-unstyled interests-list">
 <li>Photographing</li>
 <li>Snowboarding</li>
+<li>Traveling</li>
 <li>Machine Learning</li>
 </ul>
 </div><!--//interests-->
