--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -17,7 +17,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Visit Consumer Electronics Show(CES)</h3>
+                            <h3 class="job-title">Attended Consumer Electronics Show(CES)</h3>
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
                         <div class="company">Las Vegas, NV</div>
