--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -10,7 +10,7 @@
                         <div class="company">Gachon University</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Attend network seminar every week..</p>
+                        <p>Attend network seminar every week.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
