--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -4,8 +4,24 @@
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> -->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Traveled 11 countries</a></span><br>
-                     - <span class="project-tagline">US, England, France, Switzerland, Italy, Austria, German, Netherland, Thailand, Philippines, Hongkong</span><br>
+                    <span class="project-title"><a href="#hook">Visited 11 countries</a></span><br>
+                     - <span class="project-tagline">
+                       <img src="{{site.baseurl}}/assets/images/us.png"/> US</span><br>
+                     - <span class="project-tagline">
+                       <img src="{{site.baseurl}}/assets/images/eu.png"/> EU</span><br>
+            &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png"/> England /
+                         <img src="{{site.baseurl}}/assets/images/fr.png"/> France /
+                         <img src="{{site.baseurl}}/assets/images/ch.png"/> Switzerland /
+                         <img src="{{site.baseurl}}/assets/images/it.png"/> Italy<br>
+            &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png"/> Austria /
+                         <img src="{{site.baseurl}}/assets/images/de.png"/> German /
+                         <img src="{{site.baseurl}}/assets/images/nl.png"/> Netherland<br>
+                     - <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand</span><br>
+                     - <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines</span><br>
+                     - <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong</span><br>
                 </div><!--//item-->
 
                 <div class="item">
