--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -4,29 +4,28 @@
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> -->
                 <div class="item">
-                    <span class="project-title"><a href="#hook">Visited 11 countries</a></span><br>
-                     - <span class="project-tagline">
-                       <img src="{{site.baseurl}}/assets/images/us.png"/> US</span><br>
-                     - <span class="project-tagline">
-                       <img src="{{site.baseurl}}/assets/images/eu.png"/> EU</span><br>
+                    <h3 class="job-title"><a href="#hook">Visited 11 Countries</a></h3><br>
+                     <div class="upper-row"><p>- <img src="{{site.baseurl}}/assets/images/us.png"/> US (Intern & Travel)<div class="time">Jan - Feb 2017</div></p></div>
+                     <div class="upper-row"><p>- <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand (Volunteer activity)</span><div class="time">Aug 2016</div></p></div>
+                     <div class="upper-row"><p>- <span class="project-tagline">
+                       <img src="{{site.baseurl}}/assets/images/eu.png"/> EU (Overseas training & Travel)</span><div class="time">Jan - Feb 2016</div>
             &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png"/> England /
                          <img src="{{site.baseurl}}/assets/images/fr.png"/> France /
                          <img src="{{site.baseurl}}/assets/images/ch.png"/> Switzerland /
                          <img src="{{site.baseurl}}/assets/images/it.png"/> Italy<br>
             &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png"/> Austria /
                          <img src="{{site.baseurl}}/assets/images/de.png"/> German /
-                         <img src="{{site.baseurl}}/assets/images/nl.png"/> Netherland<br>
-                     - <span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand</span><br>
-                     - <span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines</span><br>
-                     - <span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong</span><br>
+                         <img src="{{site.baseurl}}/assets/images/nl.png"/> Netherland</p></div>
+                     <div class="upper-row"><p>- <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span><div class="time">Aug 2014</div></p>
+                     <div class="upper-row"><p>- <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong (Travel)</span></p>
                 </div><!--//item-->
-
+                <br>
                 <div class="item">
-                    <span class="project-title"><a href="#" target="_blank">Certifications</a></span><br>
-                     - <span class="project-tagline">Information equipment operation technician (2010)</span><br>
-                     - <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368 (2016)</span>
+                    <h3 class="job-title"><a href="#" target="_blank">Certifications</a></h3><br>
+                     <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368 (2016)</span></p>
+                     <p>- <span class="project-tagline">Information equipment operation technician (2010)</span></p>
                 </div><!--//item-->
             </section><!--//section-->
