--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
-                        <p>Apply random forest which is machine learning algorithm to sensor data for high performance.</p>
+                        <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -24,8 +24,8 @@
                         <div class="company">WHEN</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Developed group schedule management android application that find intersection time of all group members.</p>
-                        <p>Registered at google app store</p>
+                        <p>Developed group schedule management android application that find available intersection time of all group members.</p>
+                        <p>Registered at google app store.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
