--- a/_includes/education.html
+++ b/_includes/education.html
@@ -25,7 +25,7 @@
                         <div class="company">Birmingham, England</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Participated in short-term abroad education program which was held in International Affairs Center. </p>
+                        <p>Participated in short-term overseas training program which was held in International Affairs Center. </p>
 
                     </div><!--//details-->
                 </div><!--//item-->
