--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -10,7 +10,7 @@
                         <div class="company">Gachon University</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Attend network seminar every week..</p>
+                        <p>Attend thesis seminar every week.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -23,7 +23,7 @@
                         <div class="company">Las Vegas, NV</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p></p>
+                        <p>Attended 2017 CES, which was held in Las Vegas.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
