--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,6 +12,7 @@
                     <div class="details">
                         <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
                         <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
+                        <p><a href="#"><font color="#3AAA64"><font size="4"><i class="fa fa-github"></i></font> View on GitHub</font></font></a></p>
                     </div><!--//details-->
                 </div><!--//item-->
 
