--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed group schedule management android application that find available intersection time of all group members.</p>
-                        <p>Registered at google app store..</p>
+                        <p>Registered at google app store.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
