--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -23,7 +23,7 @@
                         <div class="company">Las Vegas, NV</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Attended 2017 CES, which was held in Las Vegas..</p>
+                        <p>Attended 2017 CES, which was held in Las Vegas.</p>
                     </div><!--//details-->
                 </div><!--//item-->
 
