--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,6 +4,21 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">23rd Google Startup Weekend Seoul Hackathon</h3>
+                            <div class="time">2017</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Seoul, Korea</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                      <p>Attended 23rd Google Startup Weekend - Seoul hackathon which was held in GDIC(Gaepo Digital Innovation Center).</p>
+                      <p>Developed 'Cookie' application which deliver touching sentence for exhausted people on weekday morning.</p>
+                      <p>Received 'BEST UX/UI' award in final judgement.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Research Assistant</h3>
                             <div class="time">2017 - </div>
                         </div><!--//upper-row-->
@@ -30,7 +45,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Google Startup Weekend Hackathon</h3>
+                            <h3 class="job-title">22nd Google Startup Weekend Seoul Hackathon</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
                         <div class="company">Seoul, Korea</div>
