--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,9 @@
                     <div class="details">
                         <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
                         <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
-                        <p><a href="#"><font color="#3AAA64"><font size="4"><i class="fa fa-github"></i></font> View on GitHub</font></font></a></p>
+                        <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -27,6 +29,9 @@
                     <div class="details">
                         <p>Developed group schedule management android application that find available intersection time of all group members.</p>
                         <p>Registered at google app store.</p>
+                        <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
                     </div><!--//details-->
                 </div><!--//item-->
 
