--- a/assets/css/styles-6.css
+++ b/assets/css/styles-6.css
@@ -1,4 +1,4 @@
-/*   
+/*
  * Template Name: Orbit - Responsive Resume/CV Template for Developers
  * Version: 1.0
  * Author: Xiaoying Riley
@@ -41,6 +41,10 @@ a:focus {
 }
 p {
   line-height: 1.5;
+}
+.view-on-github {
+  color: #3AAA64;
+  font-size: 4;
 }
 .wrapper {
   background: #4B6A78;
@@ -294,7 +298,7 @@ p {
 /* Large devices (large desktops, 1200px and up) */
 /* Ex-Large devices (large desktops, 1200px and up) */
 
-/* 
+/*
 used for profile image
 */
 .profile-img {
@@ -304,4 +308,3 @@ used for profile image
   border-radius: 100%;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
-
