--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -28,7 +28,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed group schedule management android application that find available intersection time of all group members.</p>
-                        <p>Registered at google app store.</p>
+                        <p>Registered at google app store..</p>
                         <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
