--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,6 +1,12 @@
 <section class="section summary-section">
-<h2 class="section-title"><i class="fa fa-check"></i>OBJECTIVE</h2>
+<h2 class="section-title"><i class="fa fa-user"></i>ABOUT ME</h2>
 <div class="summary">
-    <p>An employment opportunity in a <b>Data Science</b> related field in Computer Science.</p>
+    <p><b>"Nothing goes as I expected, so every moment is enjoyable."</b></p>
+    <p>This is the motto of my life.
+    I think everything in this world is relative, so positive thoughts are very important.
+    I start by reading this phrase everyday morning, and I try to live more positive.</p>
+    <p>I love traveling and have a global insight based on my experience traveling through many countries.</p>
+    <p>Also I love everything related to computers and data science.
+    I have a dream to be a data scientist, and the goal of my life is to make small changes in human lives with use of the knowledge I know.</p>
 </div><!--//summary-->
 </section><!--//section-->
