--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,17 +4,17 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Graduation Project</h3>
+                            <h3 class="job-title">INO Project</h3>
                             <div class="time">2016 - 2017</div>
                         </div><!--//upper-row-->
-                        <div class="company">In & Out</div>
+                        <div class="company">Real-time indoor people count</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
                         <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
-                        <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -29,9 +29,9 @@
                     <div class="details">
                         <p>Developed group schedule management android application that find available intersection time of all group members.</p>
                         <p>Registered at google app store.</p>
-                        <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
                     </div><!--//details-->
                 </div><!--//item-->
 
