--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -13,9 +13,9 @@
                       <p>Attended 23rd Google Startup Weekend - Seoul hackathon which was held in GDIC(Gaepo Digital Innovation Center).</p>
                       <p>Developed 'Cookie' application which deliver touching sentence for exhausted people on weekday morning.</p>
                       <p>Received 'BEST UX/UI' award in final judgement.</p>
-                      <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                      <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                         <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                         <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -42,7 +42,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Attended 2017 CES, which was held in Las Vegas.</p>
-                        <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -57,9 +57,9 @@
                     <div class="details">
                         <p>Developed 'Monster Games' which is Location-Based Service(LBS) Game in Google Startup Weekend - Seoul hackathon that was held in Gachon univ.</p>
                         <p>Received 3rd place in final judgement.</p>
-                        <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -74,7 +74,7 @@
                     <div class="details">
                         <p>Basic smartphone education for the aged in Sujeong senior welfare center during summer vacation.</p>
                         <p>Broadcasted in ABN which is Seongnam local broadcasting system.</p>
-                        <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
                     </div><!--//details-->
                 </div><!--//item-->
 
