--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed 'Real-time indoor people count system' using arduino ultrasonic sensor and android application.</p>
-                        <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance..</p>
+                        <p>Apply random forest which is machine learning algorithm for sensor data processing for high performance.</p>
                         <!--<p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>-->
