--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -35,4 +35,21 @@
                     </div><!--//details-->
                 </div><!--//item-->
 
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Graphics Project</h3>
+                            <div class="time">2016</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Solar System Explorer</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Developed 'Solar System Explorer' program with C++ and OpneGL library.</p>
+                        <p>Made a presenstation at the Software festival at Gachon university.</p>
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+                    </div><!--//details-->
+                </div><!--//item-->
+
             </section><!--//section-->
