--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -52,4 +52,23 @@
                     </div><!--//details-->
                 </div><!--//item-->
 
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Robotics Project</h3>
+                            <div class="time">2016</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Segway Robot</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Developed 'Segway Robot' that is auto-balancing robot with gyroscope and accelometer sensors.</p>
+                        <p>Using Arduino with PID control algorithm and Adafruit library.</p>
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <!-- 로봇공학 / 구글 스타트업위켄드 프로젝트 2개 -->
+
             </section><!--//section-->
