--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,12 @@
     <!-- Javascript -->
     <script type="text/javascript" src="{{site.baseurl}}/assets/plugins/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery.fittext.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/wow.min.js"></script>
     <!-- custom js -->
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/assets/js/creative.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
