--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -5,7 +5,10 @@
                 </div> -->
                 <div class="item">
                     <h3 class="job-title"><a href="#hook">Visited 11 Countries</a></h3><br>
-                     <div class="upper-row"><p>- <img src="{{site.baseurl}}/assets/images/us.png"/> US (Intern & Travel)<div class="time">Jan - Feb 2017</div></p></div>
+                     <div class="upper-row">
+                       <p>- <img src="{{site.baseurl}}/assets/images/us.png"/> US (Intern & Travel)
+                         <div class="time">Jan - Feb 2017</div></p>
+                     </div>
                      <div class="upper-row"><p>- <span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand (Volunteer activity)</span><div class="time">Aug 2016</div></p></div>
                      <div class="upper-row"><p>- <span class="project-tagline">
@@ -21,6 +24,7 @@
                          <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span><div class="time">Aug 2014</div></p>
                      <div class="upper-row"><p>- <span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong (Travel)</span></p>
+                         <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
                 </div><!--//item-->
                 <br>
                 <div class="item">
