--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -24,7 +24,7 @@
                          <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span><div class="time">Aug 2014</div></p>
                      <div class="upper-row"><p>- <span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong (Travel)</span></p>
-                         <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p>
+                         <!-- <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
                 </div><!--//item-->
                 <br>
                 <div class="item">
