--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -62,7 +62,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed 'Segway Robot' that is auto-balancing robot with gyroscope and accelometer sensors.</p>
-                        <p>Using Arduino with PID control algorithm and Adafruit library..</p>
+                        <p>Using Arduino with PID control algorithm and Adafruit library.</p>
                         <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
