--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -7,6 +7,6 @@
     I start by reading this phrase everyday morning, and I try to live more positive.</p>
     <p>I love traveling and have a global insight based on my experience traveling through many countries.</p>
     <p>Also I love everything related to computers and data science.
-    I have a dream to be a data scientist, and the goal of my life is to make small changes in human lives with use of the knowledge I know.</p>
+    I have a dream to be a <b>data scientist</b>, and the goal of my life is to make small changes in human lives with use of the knowledge I know.</p>
 </div><!--//summary-->
 </section><!--//section-->
