--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">INO Project</h3>
+                            <h3 class="job-title">PEOPLE INSIDE</h3>
                             <div class="time">2016 - 2017</div>
                         </div><!--//upper-row-->
                         <div class="company">Real-time indoor people count</div>
@@ -21,10 +21,10 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Mobile Application</h3>
+                            <h3 class="job-title">WHEN</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">WHEN</div>
+                        <div class="company">Group Schedule Manager (Android Application)</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed group schedule management android application that find available intersection time of all group members.</p>
