--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -49,6 +49,23 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">KIISE Winter Conference</h3>
+                            <div class="time">2016</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Gangwon, Korea</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Participated the winter conference hosted by Korean Institute of Information Scientists and Engineers.</p>
+                        <p></p>
+                        <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">22nd Google Startup Weekend Seoul Hackathon</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
