--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -29,7 +29,7 @@
                 <br>
                 <div class="item">
                     <h3 class="job-title"><a href="#" target="_blank">Certifications</a></h3><br>
-                     <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368 (2016)</span></p>
-                     <p>- <span class="project-tagline">Information equipment operation technician (2010)</span></p>
+                     <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368</span><div class="time">2016</p>
+                     <p>- <span class="project-tagline">Information equipment operation technician</span><div class="time">2010</p>
                 </div><!--//item-->
             </section><!--//section-->
