--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -73,7 +73,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed 'Monster Games' which is Location-Based Service(LBS) Game in Google Startup Weekend - Seoul hackathon that was held in Gachon univ.</p>
-                        <p>Received 3rd place in final judgement..</p>
+                        <p>Received 3rd place in final judgement.</p>
                         <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
