--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -1,7 +1,7 @@
 <section class="section summary-section">
 <h2 class="section-title"><i class="fa fa-user"></i>ABOUT ME</h2>
 <div class="summary">
-    <p><b>"마음대로 되는 일이 하나도 없다. 그래서 순간순간이 재미있다." - 공지영</b></p>
+    <!--<p><b>"마음대로 되는 일이 하나도 없다. 그래서 순간순간이 재미있다." - 공지영</b></p>-->
     <p><b>"Nothing goes as I expected, so every moment is enjoyable."</b></p>
     <p>This is the motto of my life.
     I think everything in this world is relative, so positive thoughts are very important.
