--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,77 +1,96 @@
 <section class="skills-section section">
-                <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
-                <div class="skillset">
-                  <div class="item">
-                      <h3 class="level-title">HTML5 &amp; CSS</h3>
-                      <div class="level-bar">
-                          <div class="level-bar-inner" data-level="90%">
-                          </div>
-                      </div><!--//level-bar-->
-                  </div><!--//item-->
+  <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
+  <div class="skillset">
+    <div class="item">
+      <h3 class="level-title">HTML5 &amp; CSS</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="90%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">C &amp; C++</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">C &amp; C++</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="90%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Visual Basic</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">Visual Basic</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="85%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Photoshop</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">Photoshop</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="85%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Premiere Pro</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="85%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">Premiere Pro</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="85%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Android</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="75%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">Android</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="75%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">MATLAB</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="70%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">MATLAB</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="70%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Javascript &amp; jQuery</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="65%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">Javascript &amp; jQuery</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="65%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                    <div class="item">
-                        <h3 class="level-title">Python</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="55%">
-                            </div>
-                        </div><!--//level-bar-->
-                    </div><!--//item-->
+    <div class="item">
+      <h3 class="level-title">Python</h3>
+      <div class="level-bar">
+        <div class="level-bar-inner" data-level="55%">
+        </div>
+      </div>
+      <!--//level-bar-->
+    </div>
+    <!--//item-->
 
-                </div>
-            </section><!--//skills-section-->
+  </div>
+</section>
+<!--//skills-section-->
