--- a/_includes/additional_info.html
+++ b/_includes/additional_info.html
@@ -1,35 +1,62 @@
 <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-info"></i>Additional infomation</h2>
-                <!-- <div class="intro">
+  <h2 class="section-title"><i class="fa fa-info"></i>Additional infomation</h2>
+  <!-- <div class="intro">
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> -->
-                <div class="item">
-                    <h3 class="job-title"><a href="#hook">Visited 11 Countries</a></h3><br>
-                     <div class="upper-row">
-                       <p>- <img src="{{site.baseurl}}/assets/images/us.png"/> US (Intern & Travel)
-                         <div class="time">Jan - Feb 2017</div></p>
-                     </div>
-                     <div class="upper-row"><p>- <span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand (Volunteer activity)</span><div class="time">Aug 2016</div></p></div>
-                     <div class="upper-row"><p>- <span class="project-tagline">
-                       <img src="{{site.baseurl}}/assets/images/eu.png"/> EU (Overseas training & Travel)</span><div class="time">Jan - Feb 2016</div>
-            &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png"/> England /
-                         <img src="{{site.baseurl}}/assets/images/fr.png"/> France /
-                         <img src="{{site.baseurl}}/assets/images/ch.png"/> Switzerland /
-                         <img src="{{site.baseurl}}/assets/images/it.png"/> Italy<br>
-            &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png"/> Austria /
-                         <img src="{{site.baseurl}}/assets/images/de.png"/> German /
-                         <img src="{{site.baseurl}}/assets/images/nl.png"/> Netherland</p></div>
-                     <div class="upper-row"><p>- <span class="project-tagline">
-                         <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span><div class="time">Aug 2014</div></p>
-                     <div class="upper-row"><p>- <span class="project-tagline">
+  <div class="item">
+    <h3 class="job-title"><a href="#hook">Visited 11 Countries</a></h3><br>
+    <div class="upper-row">
+      <p>- <img src="{{site.baseurl}}/assets/images/us.png" /> US (Intern & Travel)
+        <div class="time">Jan - Feb 2017</div>
+      </p>
+    </div>
+    <div class="upper-row">
+      <p>- <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/th.png"/> Thailand (Volunteer activity)</span>
+        <div class="time">Aug 2016</div>
+      </p>
+    </div>
+    <div class="upper-row">
+      <p>- <span class="project-tagline">
+                       <img src="{{site.baseurl}}/assets/images/eu.png"/> EU (Overseas training & Travel)</span>
+        <div class="time">Jan - Feb 2016</div>
+        &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/gb.png" /> England /
+        <img src="{{site.baseurl}}/assets/images/fr.png" /> France /
+        <img src="{{site.baseurl}}/assets/images/ch.png" /> Switzerland /
+        <img src="{{site.baseurl}}/assets/images/it.png" /> Italy<br> &nbsp;&nbsp;&nbsp;&nbsp; <img src="{{site.baseurl}}/assets/images/at.png" /> Austria /
+        <img src="{{site.baseurl}}/assets/images/de.png" /> German /
+        <img src="{{site.baseurl}}/assets/images/nl.png" /> Netherland</p>
+    </div>
+    <div class="upper-row">
+      <p>- <span class="project-tagline">
+                         <img src="{{site.baseurl}}/assets/images/ph.png"/> Philippines (Volunteer activity)</span>
+        <div class="time">Aug 2014</div>
+      </p>
+      <div class="upper-row">
+        <p>- <span class="project-tagline">
                          <img src="{{site.baseurl}}/assets/images/hk.png"/> Hongkong (Travel)</span></p>
-                         <!-- <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
-                </div><!--//item-->
-                <br>
-                <div class="item">
-                    <h3 class="job-title"><a href="#" target="_blank">Certifications</a></h3><br>
-                     <div class="upper-row"><p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368</span><div class="time">2016</div></p></div>
-                     <div class="upper-row"><p>- <span class="project-tagline">Information equipment operation technician</span><div class="time">2010</div></p></div>
-                </div><!--//item-->
-            </section><!--//section-->
+        <!-- <p><a href="{{site.baseurl}}/photos/index.html" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
+      </div>
+      <!--//item-->
+      <br>
+      <div class="item">
+        <h3 class="job-title"><a href="#" target="_blank">Certifications</a></h3><br>
+        <div class="upper-row">
+          <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 412 (Ranked within top 9.6%) - Tier 3</span>
+            <div class="time">2017</div>
+          </p>
+        </div>
+        <div class="upper-row">
+          <p>- <span class="project-tagline">TOPCIT(Test Of Practical Competency in ICT) score 368</span>
+            <div class="time">2016</div>
+          </p>
+        </div>
+        <div class="upper-row">
+          <p>- <span class="project-tagline">Information equipment operation technician</span>
+            <div class="time">2010</div>
+          </p>
+        </div>
+      </div>
+      <!--//item-->
+</section>
+<!--//section-->
