--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -38,14 +38,14 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Graphics Project</h3>
+                            <h3 class="job-title">Solar System Explorer</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">Solar System Explorer</div>
+                        <div class="company">Solar System Simulation</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Developed 'Solar System Explorer' program with C++ and OpneGL library.</p>
-                        <p>Made a presenstation at the Software festival at Gachon university.</p>
+                        <p>Developed 'Solar System Explorer' program with C++ and OpenGL library.</p>
+                        <p>Made a presentation at the Software festival at Gachon university.</p>
                         <!-- <p><a href="#" class="view-on-github"><i class="fa fa-link"></i> Link</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-github"></i> GitHub</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                            <a href="#" class="view-on-github"><i class="fa fa-camera"></i> Photos</a></p> -->
@@ -55,10 +55,10 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Robotics Project</h3>
+                            <h3 class="job-title">Segway Robot</h3>
                             <div class="time">2016</div>
                         </div><!--//upper-row-->
-                        <div class="company">Segway Robot</div>
+                        <div class="company">Self-balancing robot</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Developed 'Segway Robot' that is auto-balancing robot with gyroscope and accelometer sensors.</p>
